--- a/SharpFile/SharpFile.csproj
+++ b/SharpFile/SharpFile.csproj
@@ -43,6 +43,12 @@
     <Compile Include="Child.Designer.cs">
       <DependentUpon>Child.cs</DependentUpon>
     </Compile>
+    <Compile Include="FileBrowser.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FileBrowser.Designer.cs">
+      <DependentUpon>FileBrowser.cs</DependentUpon>
+    </Compile>
     <Compile Include="ListView.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -63,6 +69,10 @@
     <EmbeddedResource Include="Child.resx">
       <SubType>Designer</SubType>
       <DependentUpon>Child.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FileBrowser.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>FileBrowser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Parent.resx">
       <SubType>Designer</SubType>
@@ -88,6 +98,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="TabControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="TabPage.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="UnitDisplayType.cs" />
