--- a/SharpFile/SharpFile.UI/SharpFile.UI.csproj
+++ b/SharpFile/SharpFile.UI/SharpFile.UI.csproj
@@ -35,9 +35,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IconManager.cs" />
+    <Compile Include="IconReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShellContextMenu.cs" />
-    <Compile Include="SysImageList.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SharpFile.IO\SharpFile.IO.csproj">
