--- a/SharpFile/SharpFile.csproj
+++ b/SharpFile/SharpFile.csproj
@@ -38,10 +38,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Child.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Child.Designer.cs">
       <DependentUpon>Child.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MdiChild.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdiChild.Designer.cs">
+      <DependentUpon>MdiChild.cs</DependentUpon>
     </Compile>
     <Compile Include="FileBrowser.cs">
       <SubType>Component</SubType>
@@ -52,11 +58,11 @@
     <Compile Include="ListView.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Parent.cs">
+    <Compile Include="MdiParent.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Parent.Designer.cs">
-      <DependentUpon>Parent.cs</DependentUpon>
+    <Compile Include="MdiParent.Designer.cs">
+      <DependentUpon>MdiParent.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="ProgressDisk.cs">
@@ -70,18 +76,26 @@
       <SubType>Designer</SubType>
       <DependentUpon>Child.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MdiChild.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>MdiChild.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FileBrowser.resx">
       <DependentUpon>FileBrowser.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Parent.resx">
+    <EmbeddedResource Include="MdiParent.resx">
       <SubType>Designer</SubType>
-      <DependentUpon>Parent.cs</DependentUpon>
+      <DependentUpon>MdiParent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TabParent.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>TabParent.cs</DependentUpon>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -97,8 +111,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="TabChild.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="TabControl.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="TabParent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TabParent.Designer.cs">
+      <DependentUpon>TabParent.cs</DependentUpon>
     </Compile>
     <Compile Include="ToolStripSpringTextBox.cs">
       <SubType>Component</SubType>
