--- a/SharpFile/SharpFile.csproj
+++ b/SharpFile/SharpFile.csproj
@@ -37,11 +37,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseParent.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Child.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Child.Designer.cs">
       <DependentUpon>Child.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DualParent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DualParent.Designer.cs">
+      <DependentUpon>DualParent.cs</DependentUpon>
     </Compile>
     <Compile Include="MdiChild.cs">
       <SubType>Form</SubType>
@@ -75,6 +84,10 @@
     <EmbeddedResource Include="Child.resx">
       <SubType>Designer</SubType>
       <DependentUpon>Child.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DualParent.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>DualParent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MdiChild.resx">
       <SubType>Designer</SubType>
