Create an interface that all resources and resource retrievers will share. This should facilitate plug-ins further down the road. It should clean everything up as well. Beginnings of enumerating servers in the drive drop down list.

--- a/SharpFile/SharpFile.IO/SharpFile.IO.csproj
+++ b/SharpFile/SharpFile.IO/SharpFile.IO.csproj
@@ -41,7 +41,12 @@
     <Compile Include="FileInfo.cs" />
     <Compile Include="FileSystemInfo.cs" />
     <Compile Include="FileSystemInfoFactory.cs" />
-    <Compile Include="IOException.cs" />
+    <Compile Include="IOException.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="IResource.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="ParentDirectoryInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RootDirectoryInfo.cs" />
