--- a/SharpFile/SharpFile.Infrastructure/SharpFile.Infrastructure.csproj
+++ b/SharpFile/SharpFile.Infrastructure/SharpFile.Infrastructure.csproj
@@ -34,10 +34,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileRetriever.cs" />
     <Compile Include="FileSystem.cs" />
     <Compile Include="FileSystemEnumerator.cs" />
     <Compile Include="FileSystemWatcher.cs" />
+    <Compile Include="IResourceRetriever.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerEnum.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
