--- a/SharpFile/SharpFile.IO/SharpFile.IO.csproj
+++ b/SharpFile/SharpFile.IO/SharpFile.IO.csproj
@@ -41,6 +41,7 @@
     <Compile Include="File.cs" />
     <Compile Include="FileInfo.cs" />
     <Compile Include="FileSystemInfo.cs" />
+    <Compile Include="IChildResourceRetriever.cs" />
     <Compile Include="IOException.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -48,10 +49,15 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="IParentResource.cs" />
+    <Compile Include="IParentResourceRetriever.cs" />
     <Compile Include="IResource.cs" />
     <Compile Include="NullInfo.cs" />
     <Compile Include="ParentDirectoryInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Retrievers\DriveRetriever.cs" />
+    <Compile Include="Retrievers\FileRetriever.cs" />
+    <Compile Include="Retrievers\NullRetriever.cs" />
+    <Compile Include="Retrievers\ServerRetriever.cs" />
     <Compile Include="RootDirectoryInfo.cs" />
     <Compile Include="ServerInfo.cs" />
   </ItemGroup>
@@ -60,6 +66,10 @@
       <Project>{343E4170-8C5E-4E9E-AB90-7DA25BDEE740}</Project>
       <Name>Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ChildResources\" />
+    <Folder Include="ParentResources\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
