--- a/SharpFile/SharpFile.IO/SharpFile.IO.csproj
+++ b/SharpFile/SharpFile.IO/SharpFile.IO.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Compile Include="ChildResourceFactory.cs" />
     <Compile Include="ChildResources\DirectoryInfo.cs" />
+    <Compile Include="IView.cs" />
     <Compile Include="ParentResources\DriveInfo.cs" />
     <Compile Include="DriveType.cs" />
     <Compile Include="ChildResources\FileInfo.cs" />
