--- a/SharpFile/SharpFile.Infrastructure/SharpFile.Infrastructure.csproj
+++ b/SharpFile/SharpFile.Infrastructure/SharpFile.Infrastructure.csproj
@@ -28,6 +28,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Common, Version=0.4.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Common.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
@@ -40,10 +44,6 @@
     <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Common.csproj">
-      <Project>{343E4170-8C5E-4E9E-AB90-7DA25BDEE740}</Project>
-      <Name>Common</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SharpFile.IO\SharpFile.IO.csproj">
       <Project>{F9F8A1B7-00C8-411C-8063-987C1F720956}</Project>
       <Name>SharpFile.IO</Name>
