--- a/SharpFile/SharpFile.csproj
+++ b/SharpFile/SharpFile.csproj
@@ -71,6 +71,10 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="BaseParent.resx">
+      <DependentUpon>BaseParent.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="MdiParent.resx">
       <SubType>Designer</SubType>
       <DependentUpon>MdiParent.cs</DependentUpon>
