Preliminary support for storing dictionary values in the settings and serializing/deserializing them.

--- a/SharpFile/SharpFile.Infrastructure/SharpFile.Infrastructure.csproj
+++ b/SharpFile/SharpFile.Infrastructure/SharpFile.Infrastructure.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Nodes.cs" />
     <Compile Include="FileSystemWatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerEnum.cs" />
