--- a/SharpFile/SharpFile.IO/SharpFile.IO.csproj
+++ b/SharpFile/SharpFile.IO/SharpFile.IO.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{F9F8A1B7-00C8-411C-8063-987C1F720956}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -39,6 +39,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -51,6 +52,7 @@
     <Compile Include="DriveType.cs" />
     <Compile Include="ChildResources\FileInfo.cs" />
     <Compile Include="FileSystemInfo.cs" />
+    <Compile Include="ParentResources\NetworkDriveInfo.cs" />
     <Compile Include="Retrievers\IChildResourceRetriever.cs" />
     <Compile Include="IOException.cs">
       <SubType>Code</SubType>
@@ -65,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Retrievers\DriveRetriever.cs" />
     <Compile Include="Retrievers\FileRetriever.cs" />
+    <Compile Include="Retrievers\NetworkDriveRetriever.cs" />
     <Compile Include="Retrievers\NullRetriever.cs" />
     <Compile Include="Retrievers\ServerRetriever.cs" />
     <Compile Include="ChildResources\RootDirectoryInfo.cs" />
