--- a/SharpFile/SharpFile.UI/SharpFile.UI.csproj
+++ b/SharpFile/SharpFile.UI/SharpFile.UI.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3896D530-3308-45BC-B802-AE953EDAD227}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -46,6 +46,10 @@
     <Compile Include="ShellContextMenu.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SharpFile.Infrastructure\SharpFile.Infrastructure.csproj">
+      <Project>{96C1D4FB-2A4F-4746-A9C0-C28E491CBB8B}</Project>
+      <Name>SharpFile.Infrastructure</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SharpFile.IO\SharpFile.IO.csproj">
       <Project>{F9F8A1B7-00C8-411C-8063-987C1F720956}</Project>
       <Name>SharpFile.IO</Name>
