Move Icon settings to its own sub-section. Move general code to the Common assembly.

--- a/SharpFile/SharpFile.Infrastructure/Resources/settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/settings.config
@@ -4,6 +4,18 @@
   <Height>500</Height>
   <SplitterPercentage>50</SplitterPercentage>
   <DirectoriesSortedFirst>true</DirectoriesSortedFirst>
+  <Icons>
+    <ShowOverlay>true</ShowOverlay>
+    <Extensions>
+      <Extension>.exe</Extension>
+      <Extension>.lnk</Extension>
+      <Extension>.dll</Extension>
+      <Extension>.ps</Extension>
+      <Extension>.scr</Extension>
+      <Extension>.ico</Extension>
+      <Extension>.icn</Extension>
+    </Extensions>
+  </Icons>
   <ResourceRetrievers>
     <ResourceRetriever Name="DriveRetriever" ChildResourceRetriever="FileRetriever">
       <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.DriveRetriever" />
@@ -16,24 +28,24 @@
     <ChildResourceRetriever Name="FileRetriever">
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true">
-          <ComparerType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.StringLogicalComparer" />
+          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
         </ColumnInfo>
         <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
-          <ComparerType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.StringLogicalComparer" />
+          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
-          <ComparerType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.StringLogicalComparer" />
+          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetDateTimeShortDateString">
-            <FullyQualifiedType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.Settings" />
+            <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
-          <ComparerType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.StringLogicalComparer" />
+          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetDateTimeShortTimeString">
-            <FullyQualifiedType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.Settings" />
+            <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
