Add ability for more than one child resource retriever to be defined for a resource.

--- a/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
@@ -17,15 +17,25 @@
     </Extensions>
   </Icons>
   <ResourceRetrievers>
-    <ResourceRetriever Name="DriveRetriever" ChildResourceRetriever="FileRetriever">
+    <ResourceRetriever Name="DriveRetriever">
+      <ChildResourceRetrievers>
+        <ChildResourceRetriever>CompressedFileRetriever</ChildResourceRetriever>
+        <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
+      </ChildResourceRetrievers>
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.DriveRetriever" />
     </ResourceRetriever>
-    <ResourceRetriever Name="NetworkDriveRetriever" ChildResourceRetriever="FileRetriever">
+    <ResourceRetriever Name="NetworkDriveRetriever">
+      <ChildResourceRetrievers>
+        <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
+      </ChildResourceRetrievers>
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.NetworkDriveRetriever" />
     </ResourceRetriever>
   </ResourceRetrievers>
   <ChildResourceRetrievers>
     <ChildResourceRetriever Name="FileRetriever">
+      <MethodDelegateType Method="DefaultCustomMethod">
+        <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
+      </MethodDelegateType>
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true">
           <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
@@ -52,4 +62,4 @@
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.FileRetriever" />
     </ChildResourceRetriever>
   </ChildResourceRetrievers>
-</Settings>
+</Settings}
