--- a/SharpFile/SharpFile.Infrastructure/Resources/settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/settings.config
@@ -17,15 +17,25 @@
     </Extensions>
   </Icons>
   <ResourceRetrievers>
-    <ResourceRetriever Name="DriveRetriever" ChildResourceRetriever="FileRetriever">
+    <ResourceRetriever Name="DriveRetriever">
+      <ChildResourceRetrievers>
+        <ChildResourceRetriever>CompressedFileRetriever</ChildResourceRetriever>
+        <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
+      </ChildResourceRetrievers>
       <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.DriveRetriever" />
     </ResourceRetriever>
-    <ResourceRetriever Name="NetworkDriveRetriever" ChildResourceRetriever="FileRetriever">
+    <ResourceRetriever Name="NetworkDriveRetriever">
+      <ChildResourceRetrievers>
+        <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
+      </ChildResourceRetrievers>
       <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.NetworkDriveRetriever" />
     </ResourceRetriever>
   </ResourceRetrievers>
   <ChildResourceRetrievers>
     <ChildResourceRetriever Name="FileRetriever">
+      <MethodDelegateType Method="DefaultCustomMethod">
+        <FullyQualifiedType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
+      </MethodDelegateType>
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true">
           <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
