--- a/SharpFile/SharpFile.Infrastructure/Resources/settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/settings.config
@@ -115,7 +115,7 @@
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
-      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.FileRetriever" />
+      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.CompressedFileRetriever" />
     </ChildResourceRetriever>
   </ChildResourceRetrievers>
 </Settings>
