--- a/SharpFile/SharpFile.Infrastructure/SharpFile.Infrastructure.csproj
+++ b/SharpFile/SharpFile.Infrastructure/SharpFile.Infrastructure.csproj
@@ -46,18 +46,18 @@
     <Compile Include="ChildResourceRetrieverInfo.cs" />
     <Compile Include="ChildResourceRetrievers.cs" />
     <Compile Include="ColumnInfo.cs" />
-    <Compile Include="DualParentSettings.cs" />
+    <Compile Include="Settings\DualParentSettings.cs" />
     <Compile Include="FullyQualifiedMethod.cs" />
     <Compile Include="FullyQualifiedType.cs" />
-    <Compile Include="IChildResource.cs" />
-    <Compile Include="IChildResourceRetriever.cs" />
-    <Compile Include="IconSettings.cs" />
-    <Compile Include="IFileContainer.cs" />
-    <Compile Include="IViewComparer.cs" />
-    <Compile Include="IResource.cs" />
-    <Compile Include="IResourceRetriever.cs" />
-    <Compile Include="IView.cs" />
-    <Compile Include="MdiParentSettings.cs" />
+    <Compile Include="Interfaces\IChildResource.cs" />
+    <Compile Include="Interfaces\IChildResourceRetriever.cs" />
+    <Compile Include="Settings\IconSettings.cs" />
+    <Compile Include="Interfaces\IFileContainer.cs" />
+    <Compile Include="Interfaces\IViewComparer.cs" />
+    <Compile Include="Interfaces\IResource.cs" />
+    <Compile Include="Interfaces\IResourceRetriever.cs" />
+    <Compile Include="Interfaces\IView.cs" />
+    <Compile Include="Settings\MdiParentSettings.cs" />
     <Compile Include="ParentType.cs" />
     <Compile Include="Resource.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -68,7 +68,6 @@
     <Compile Include="Nodes.cs" />
     <Compile Include="FileSystemWatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerEnum.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
