Add logger section to the default settings. Add logger and child retrievers section to ilmerge settings. Updated todo.

--- a/SharpFile/SharpFile.Infrastructure/Resources/settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/settings.config
@@ -4,6 +4,10 @@
   <Height>500</Height>
   <SplitterPercentage>50</SplitterPercentage>
   <DirectoriesSortedFirst>true</DirectoriesSortedFirst>
+	<Logger>
+		<File>log.txt</File>
+		<LogLevel>Verbose</LogLevel>
+	</Logger>
   <Icons>
     <ShowOverlay>true</ShowOverlay>
     <Extensions>
