--- a/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
@@ -4,6 +4,10 @@
   <Height>500</Height>
   <SplitterPercentage>50</SplitterPercentage>
   <DirectoriesSortedFirst>true</DirectoriesSortedFirst>
+  <Logger>
+    <File>log.txt</File>
+    <LogLevel>Verbose</LogLevel>
+  </Logger>
   <Icons>
     <ShowOverlay>true</ShowOverlay>
     <Extensions>
@@ -19,6 +23,7 @@
   <ResourceRetrievers>
     <ResourceRetriever Name="DriveRetriever">
       <ChildResourceRetrievers>
+        <ChildResourceRetriever>ProgrammingFileRetriever</ChildResourceRetriever>
         <ChildResourceRetriever>CompressedFileRetriever</ChildResourceRetriever>
         <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
       </ChildResourceRetrievers>
@@ -60,6 +65,64 @@
         </ColumnInfo>
       </ColumnInfos>
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.FileRetriever" />
+    </ChildResourceRetriever>
+    <ChildResourceRetriever Name="ProgrammingFileRetriever">
+      <ColumnInfos>
+        <ColumnInfo Text="File" Property="DisplayName" PrimaryColumn="true">
+          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
+        </ColumnInfo>
+        <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
+          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
+          <MethodDelegateType Method="GetHumanReadableSize">
+            <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
+          </MethodDelegateType>
+        </ColumnInfo>
+        <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
+          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
+          <MethodDelegateType Method="GetDateTimeShortDateString">
+            <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
+          </MethodDelegateType>
+        </ColumnInfo>
+        <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
+          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
+          <MethodDelegateType Method="GetDateTimeShortTimeString">
+            <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
+          </MethodDelegateType>
+        </ColumnInfo>
+      </ColumnInfos>
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.FileRetriever" />
+      <MethodDelegateType Method="IsProgrammingDirectory">
+        <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
+      </MethodDelegateType>
+    </ChildResourceRetriever>
+    <ChildResourceRetriever Name="CompressedFileRetriever">
+      <ColumnInfos>
+        <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true">
+          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
+        </ColumnInfo>
+        <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
+          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
+          <MethodDelegateType Method="GetHumanReadableSize">
+            <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
+          </MethodDelegateType>
+        </ColumnInfo>
+        <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
+          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
+          <MethodDelegateType Method="GetDateTimeShortDateString">
+            <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
+          </MethodDelegateType>
+        </ColumnInfo>
+        <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
+          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
+          <MethodDelegateType Method="GetDateTimeShortTimeString">
+            <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
+          </MethodDelegateType>
+        </ColumnInfo>
+      </ColumnInfos>
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.CompressedFileRetriever" />
+      <MethodDelegateType Method="IsCompressedFile">
+        <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
+      </MethodDelegateType>
     </ChildResourceRetriever>
   </ChildResourceRetrievers>
 </Settings}
