Add log errors for catch statements. Prevent parent/root directories from showing any information except for the their display name. If a property info is null for a column info, try to retrieve the property info on subsequent attempts. Catch attempts to instantiate an abstract class. Add CompressedFileInfo.cs.

--- a/SharpFile/SharpFile.IO/SharpFile.IO.csproj
+++ b/SharpFile/SharpFile.IO/SharpFile.IO.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChildResourceFactory.cs" />
+    <Compile Include="ChildResources\CompressedFileInfo.cs" />
     <Compile Include="ChildResources\DirectoryInfo.cs" />
     <Compile Include="FileSystemInfo.cs">
       <SubType>Code</SubType>
