--- a/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
@@ -106,6 +106,12 @@
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
+        <ColumnInfo Text="Compressed Size" Property="CompressedSize" PrimaryColumn="false">
+          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
+          <MethodDelegateType Method="GetHumanReadableSize">
+            <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
+          </MethodDelegateType>
+        </ColumnInfo>
         <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
           <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetDateTimeShortDateString">
@@ -119,7 +125,7 @@
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
-      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.CompressedFileRetriever" />
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.CompressedFileRetrievers.ReadOnlyCompressedFileRetriever" />
       <MethodDelegateType Method="IsCompressedFile">
         <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
       </MethodDelegateType>
